# wdi-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: linux.yml  windows.yml
inf/: sample.inf
libwdi/: README.md
src/: ffi.rs  installer.rs  lib.rs  wdi.rs
